Fixed broken layout

--- a/www/wp-content/themes/soam/scss/layout/doubled-image.scss
+++ b/www/wp-content/themes/soam/scss/layout/doubled-image.scss
@@ -6,6 +6,7 @@
   position: relative;
   display: flex;
   align-items: center;
+  width: 100%;
   height: var(--bg-img-height);
   border-radius: var(--border-radius);
 
